--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,5 +1,6 @@
 server {
 	listen					127.0.0.1:8000
+	listen					127.0.0.1:8001
 	server_name				localhost base
 	error_page 404			./www/404.html
 	client_max_body_size	100M
