--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,7 +1,7 @@
 server {
 	listen					127.0.0.1:8000
 	listen					127.0.0.1:8001
-	server_name				localhost base
+	server_name				base
 	error_page 404			./www/404.html
 	client_max_body_size	100M
 	allow_methods			GET POST DELETE
