--- a/conf/default.conf
+++ b/conf/default.conf
@@ -5,18 +5,14 @@ server {
 	error_page 404			./www/404.html
 	client_max_body_size	100M
 	allow_methods			GET POST DELETE
-	root					/www
+	root					./www/
 
 	location / {
 		autoindex			on
 		index				index.html
 	}
 
-	location /images {
-		root	/www/images
-	}
-
-	location /google {
+	location /google/ {
 		return	https://www.google.com/
 	}
 }
