commit work with request

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -7,9 +7,10 @@ server {
 	allow_methods			GET POST DELETE
 	root					./www/
 
-	location / {
+	location /directory/ {
+		root				./YoupiBanane
 		autoindex			on
-		index				index.html
+		index				youpi.bad_extension
 	}
 
 	location /google/ {
