--- a/conf/default.conf
+++ b/conf/default.conf
@@ -7,10 +7,9 @@ server {
 	allow_methods			GET POST DELETE
 	root					./www/
 
-	location /directory/ {
-		root				./YoupiBanane
+	location / {
 		autoindex			on
-		index				youpi.bad_extension
+		index				index.html
 	}
 
 	location /google/ {
