--- a/conf/default.conf
+++ b/conf/default.conf
@@ -8,10 +8,25 @@ server {
 	root					./www/
 
 	location / {
+		allow_methods 		GET
 		autoindex			on
 		index				index.html
 	}
-
+	location /put_test/ {
+		allow_methods 		POST
+		autoindex			on
+		index				index.html
+	}
+	location /directory/ {
+		allow_methods 		GET
+		autoindex			on
+		index				index.html
+	}
+	location /post_body {
+		allow_methods 		GET
+		autoindex			on
+		index				index.html
+	}
 	location /google/ {
 		return	https://www.google.com/
 	}
