many small fixes

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -18,9 +18,9 @@ server {
 		index				index.html
 	}
 	location /directory/ {
+		root				./YoupiBanane/
 		allow_methods 		GET
-		autoindex			on
-		index				index.html
+		index				youpi.bad_extension
 	}
 	location /post_body {
 		allow_methods 		GET
