--- a/conf/default.conf
+++ b/conf/default.conf
@@ -8,7 +8,7 @@ server {
 	root					./www/
 
 	location / {
-		allow_methods 		GET
+		allow_methods 		GET POST DELETE
 		autoindex			on
 		index				index.html
 	}
