--- a/conf/default.conf
+++ b/conf/default.conf
@@ -4,11 +4,17 @@ server {
 	server_name				base
 	error_page 404			./www/404.html
 	client_max_body_size	100M
-	allow_methods			GET POST DELETE
+	allow_methods			GET
 	root					./www/
 
 	location / {
+		allow_methods 		GET POST
+		autoindex			off
+		index				index.html
+	}
+	location /filePost {
 		allow_methods 		GET POST DELETE
+		root				./www/filePost
 		autoindex			on
 		index				index.html
 	}
