implement redirection and add cgi to config

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -12,27 +12,39 @@ server {
 		autoindex			off
 		index				index.html
 	}
+
 	location /filePost {
 		allow_methods 		GET POST DELETE
 		root				./www/filePost
 		autoindex			on
 		index				index.html
 	}
+
 	location /put_test/ {
 		allow_methods 		POST
 		autoindex			on
 		index				index.html
 	}
+
 	location /directory/ {
 		root				./YoupiBanane/
 		allow_methods 		GET
 		index				youpi.bad_extension
 	}
+
 	location /post_body {
 		allow_methods 		GET
 		autoindex			on
 		index				index.html
 	}
+
+	location /cgi_test {
+		allow_methods 		GET
+		autoindex			on
+		index				index.html
+		cgi					./www/cgi_tester ./www/cgi
+	}
+
 	location /google/ {
 		return	https://www.google.com/
 	}
