--- a/conf/default.conf
+++ b/conf/default.conf
@@ -36,6 +36,7 @@ server {
 		allow_methods 		GET
 		autoindex			on
 		index				index.html
+		add_header Set-Cookie Path=/ HttpOnly Secure
 	}
 
 	location /cgi_test {
