--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,6 +1,7 @@
 server {
 	listen					127.0.0.1:8000
 	listen					127.0.0.1:8001
+
 	server_name				base
 	error_page 404			./www/404.html
 	client_max_body_size	100M
@@ -11,6 +12,8 @@ server {
 		allow_methods 		GET POST
 		autoindex			off
 		index				index.html
+		add_header Set-Cookie Path=/ HttpOnly Secure
+		cgi					./www/cgi1 ./www/cgi
 	}
 
 	location /filePost {
@@ -32,18 +35,11 @@ server {
 		index				youpi.bad_extension
 	}
 
-	location /post_body {
-		allow_methods 		GET
-		autoindex			on
-		index				index.html
-		add_header Set-Cookie Path=/ HttpOnly Secure
-	}
-
 	location /cgi_test {
 		allow_methods 		GET
 		autoindex			on
 		index				index.html
-		cgi					./www/cgi_tester ./www/cgi
+		cgi					./www/cgi1 ./www/cgi
 	}
 
 	location /google/ {
